[gd_scene load_steps=5 format=3 uid="uid://5ks2vltfgpme"]

[ext_resource type="Script" path="res://abilities/smite/smite.gd" id="1_wrlun"]
[ext_resource type="PackedScene" uid="uid://cskur4kawkovi" path="res://projectiles/smite/smite.tscn" id="2_5dq1y"]
[ext_resource type="Script" path="res://actions/numbers/providers/constant.gd" id="2_e6j88"]

[sub_resource type="Resource" id="Resource_y0o6j"]
script = ExtResource("2_e6j88")
constant = 10.0

[node name="Smite" type="Node2D"]
script = ExtResource("1_wrlun")
smite_projectile_scene = ExtResource("2_5dq1y")
cast_time = 0.5
recharge_time = 1.0
uid = &"Smite"
description = "Thrust your sword, skewering enemies hit and reducing their physical resistance."
cost = SubResource("Resource_y0o6j")

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
